# RNA-seq-processing-pipe

./: .gitignore  Makefile  README.md  create_location.sh  docker-compose.yaml  prepare_reference.sh  pyproject.toml  upload.sh
abra/: Dockerfile
airflow/: Dockerfile
dags/rnaseq/: rnaseq_dag.py
rseqc/: Dockerfile
samtools/: Dockerfile
scripts/: helpers.py
star/: Dockerfile
vep/: Dockerfile
