[tool.poetry]
name = "rna-seq-pipeline"
version = "0.1.0"
description = ""
authors = ["gleb <g.m.korelsky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
apache-airflow = "^2.5.3"
apache-airflow-providers-docker = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
